basic scrape requests work with caching

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -9,7 +9,7 @@ header_cors: no
 config_file: configs/logging_verbose.yaml
 
 [cache]
-db_file: store.db
+db_url: sqlite:///./store.db
 
 [scrapers]
 sz_api_key: 'API_KEY
