--- a/server/configs/logging_verbose.yaml
+++ b/server/configs/logging_verbose.yaml
@@ -34,6 +34,12 @@ loggers:
         handlers: [default]
         level: DEBUG
         propagate: no
+    aiosqlite:
+        level: ERROR
+    databases:
+        level: ERROR
+    urllib3.connectionpool:
+        level: FATAL
 root:
     level: DEBUG
     handlers: [default]
