fix FAZ scraper, add backfill script

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -4,6 +4,7 @@ port: 9090
 hosts: ["0.0.0.0", "localhost", "*.hpi.de", "hpi.de"]
 header_trusted_host: no
 header_cors: no
+debug_mode: yes
 
 [logging]
 config_file: configs/logging_verbose.yaml
