--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -1,16 +1,28 @@
 [server]
-host: 0.0.0.0
-port: 9090
-hosts: ["0.0.0.0", "localhost", "*.hpi.de", "hpi.de"]
-header_trusted_host: no
-header_cors: no
-debug_mode: yes
+host : 0.0.0.0
+port : 9090
+hosts : ["0.0.0.0", "localhost", "*.hpi.de", "hpi.de"]
+header_trusted_host : no
+header_cors : no
+debug_mode : yes
 
 [logging]
-config_file: configs/logging_verbose.yaml
+config_file : configs/logging_verbose.yaml
 
 [cache]
-db_url: sqlite:///./store.db
+db_url : sqlite:///./store.db
 
 [scrapers]
-sz_api_key: 'API_KEY
+sz_api_key : 'API_KEY
+
+[SameCommentComparator]
+active : yes
+base_weight : 1.0
+
+[SameArticleComparator]
+active : yes
+base_weight : 1.0
+
+[ReplyToComparator]
+active : yes
+base_weight : 1.0
