--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -15,6 +15,9 @@ db_url : sqlite:///./store.db
 [scrapers]
 sz_api_key : 'API_KEY
 
+[TextProcessing]
+min_split_len : 10
+
 [SameCommentComparator]
 active : yes
 base_weight : 1.0
