only use root comments

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -21,11 +21,13 @@ min_split_len : 10
 [SameCommentComparator]
 active : yes
 base_weight : 1.0
+only_consecutive : yes
 
 [SameArticleComparator]
 active : yes
 base_weight : 1.0
+only_root : yes
 
 [ReplyToComparator]
 active : yes
-base_weight : 1.0
+only_root : 1.0
