added some parameters for modifiers

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -32,3 +32,14 @@ only_root : yes
 active : yes
 base_weight : 1.0
 only_root : yes
+
+[PageRanker]
+num_iterations: 100
+d: 0.85
+normalize: yes
+
+[BottomSimilarityEdgeFilter]
+top_edges = 5
+
+[BottomReplyToEdgeFilter]
+top_edges = 5
