added similarity edge filter to configuration

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -1,5 +1,5 @@
 [server]
-host : 0.0.0.0
+host : localhost
 port : 9090
 hosts : ["0.0.0.0", "localhost", "*.hpi.de", "hpi.de"]
 header_trusted_host : no
@@ -43,3 +43,6 @@ top_edges = 5
 
 [BottomReplyToEdgeFilter]
 top_edges = 5
+
+[SimilarityEdgeFilter]
+threshold = 0.7
