--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+scipy==1.4.1
 aiofiles==0.4.0
 aiosqlite==0.12.0
 attrs==19.3.0
@@ -16,8 +17,9 @@ idna==2.9
 JsonForm==0.0.2
 jsonschema==3.2.0
 JsonSir==0.0.2
+lxml==4.5.0
 murmurhash==1.0.2
-numpy==1.18.2
+numpy==1.18.3+mkl
 preshed==3.0.2
 pybind11==2.5.0
 pydantic==1.4
