--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ jsonschema==3.2.0
 JsonSir==0.0.2
 lxml==4.5.0
 murmurhash==1.0.2
-numpy==1.18.3+mkl
+numpy==1.18.3
 preshed==3.0.2
 pybind11==2.5.0
 pydantic==1.4
