--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -9,6 +9,9 @@ debug_mode : yes
 [logging]
 config_file : configs/logging_verbose.yaml
 
+[cache]
+db_url : sqlite:///./store.db
+
 [scrapers]
 sz_api_key : 'API_KEY
 
