added config parameters

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -33,16 +33,23 @@ active : yes
 base_weight : 1.0
 only_root : yes
 
+[SimilarityComparator]
+active : yes
+base_weight : 0.1
+only_root : yes
+
 [PageRanker]
-num_iterations: 100
-d: 0.85
-normalize: yes
+num_iterations : 100
+d : 0.85
+normalize : yes
+
+[CentralityDegreeCalculator]
 
 [BottomSimilarityEdgeFilter]
-top_edges = 5
+top_edges : 5
 
 [BottomReplyToEdgeFilter]
-top_edges = 5
+top_edges : 5
 
 [SimilarityEdgeFilter]
-threshold = 0.7
+threshold : 0.7
