adapt graph and structure comparators to update edge weight data model

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -34,22 +34,34 @@ base_weight : 1.0
 only_root : yes
 
 [SimilarityComparator]
-active : yes
+active : no
 base_weight : 0.1
 only_root : yes
+max_similarity : 0.5
+
+[TemporalComparator]
+active : yes
+base_weight : 1.0
+only_root : yes
+max_time : 1000
 
 [PageRanker]
+active : no
 num_iterations : 100
 d : 0.85
 normalize : yes
 
 [CentralityDegreeCalculator]
+active : no
 
 [BottomSimilarityEdgeFilter]
+active : no
 top_edges : 5
 
 [BottomReplyToEdgeFilter]
+active : no
 top_edges : 5
 
 [SimilarityEdgeFilter]
+active : no
 threshold : 0.7
