changed config for testing

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -19,12 +19,12 @@ sz_api_key : 'API_KEY
 min_split_len : 10
 
 [SameCommentComparator]
-active : yes
+active : no
 base_weight : 1.0
 only_consecutive : yes
 
 [SameArticleComparator]
-active : yes
+active : no
 base_weight : 1.0
 only_root : yes
 
@@ -40,7 +40,7 @@ only_root : yes
 max_similarity : 0.5
 
 [TemporalComparator]
-active : yes
+active : no
 base_weight : 1.0
 only_root : yes
 max_time : 1000
@@ -50,6 +50,7 @@ active : no
 num_iterations : 100
 d : 0.85
 normalize : yes
+edge_type = same_comment
 
 [PageRankFilter]
 active : no
@@ -62,9 +63,9 @@ active : no
 top_edges : 5
 
 [BottomReplyToEdgeFilter]
-active : no
+active : yes
 top_edges : 5
 
 [SimilarityEdgeFilter]
 active : no
-threshold : 0.7
+threshold : 0.13
