added config parameters

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -17,9 +17,10 @@ sz_api_key : 'API_KEY
 
 [TextProcessing]
 min_split_len : 10
+fasttext_path: E://cc.de.300.bin
 
 [SameCommentComparator]
-active : no
+active : yes
 base_weight : 1.0
 only_consecutive : yes
 
@@ -50,7 +51,7 @@ active : no
 num_iterations : 100
 d : 0.85
 normalize : yes
-edge_type = same_comment
+edge_type : SAME_COMMENT
 
 [PageRankFilter]
 active : no
@@ -63,9 +64,27 @@ active : no
 top_edges : 5
 
 [BottomReplyToEdgeFilter]
-active : yes
-top_edges : 5
+active : no
+top_edges : 1
+
+[GenericBottomEdgeFilter]
+active : no
+top_edges : 2
+edge_type: SIMILARITY
 
 [SimilarityEdgeFilter]
 active : no
 threshold : 0.13
+
+[ReplyToEdgeFilter]
+active : yes
+threshold : 0.5
+
+[OrEdgeFilter]
+active : no
+reply_to_threshold : 0.5
+same_comment_threshold : 0.5
+same_article_threshold : -0.5
+similarity_threshold : -0.5
+same_group_threshold : -0.5
+temporal_threshold : 0.5
