added parameters for new filters

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -57,7 +57,7 @@ edge_type : SAME_COMMENT
 active : no
 
 [CentralityDegreeCalculator]
-active : no
+active : yes
 
 [BottomSimilarityEdgeFilter]
 active : no
@@ -77,7 +77,7 @@ active : no
 threshold : 0.13
 
 [ReplyToEdgeFilter]
-active : yes
+active : no
 threshold : 0.5
 
 [OrEdgeFilter]
@@ -88,3 +88,13 @@ same_article_threshold : -0.5
 similarity_threshold : -0.5
 same_group_threshold : -0.5
 temporal_threshold : 0.5
+
+[GenericStrictNodeWeightFilter]
+active : yes
+threshold : 3
+node_weight_type : DEGREE_CENTRALITY
+
+[GenericRelaxedNodeWeightFilter]
+active : no
+threshold : 2.0
+node_weight_type : DEGREE_CENTRALITY
