--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -94,3 +94,10 @@ active : yes
 strict : no
 threshold : 2
 node_weight_type : DEGREE_CENTRALITY
+
+[GenericNodeWeightBottomFilter]
+active : yes
+strict : no
+top_k : 5
+node_weight_type : DEGREE_CENTRALITY
+
