tried to fix page rank, not ready yet

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -47,14 +47,13 @@ only_root : yes
 max_time : 1000
 
 [PageRanker]
-active : no
+active : yes
 num_iterations : 100
 d : 0.85
 normalize : yes
 edge_type : SAME_COMMENT
 
-[PageRankFilter]
-active : no
+
 
 [CentralityDegreeCalculator]
 active : yes
@@ -90,14 +89,19 @@ same_group_threshold : -0.5
 temporal_threshold : 0.5
 
 [GenericNodeWeightFilter]
-active : yes
+active : no
 strict : no
 threshold : 2
 node_weight_type : DEGREE_CENTRALITY
 
 [GenericNodeWeightBottomFilter]
-active : yes
+active : no
 strict : no
 top_k : 5
 node_weight_type : DEGREE_CENTRALITY
+
+[PageRankBottomFilter]
+active : yes
+strict : no
+top_k : 10
 
