--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ idna==2.9
 JsonForm==0.0.2
 jsonschema==3.2.0
 JsonSir==0.0.2
+keras==2.3.1
 lxml==4.5.0
 murmurhash==1.0.2
 numpy==1.18.3
@@ -32,6 +33,7 @@ six==1.14.0
 soupsieve==2.0
 SQLAlchemy==1.3.15
 starlette==0.13.2
+tensorflow==2.1.0
 urllib3==1.25.8
 uvicorn==0.11.3
 websockets==8.1
