added page rank power mode

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -50,8 +50,8 @@ max_time : 1000
 active : yes
 num_iterations : 100
 d : 0.85
-normalize : yes
 edge_type : SAME_COMMENT
+use_power_mode : no
 
 
 
@@ -102,6 +102,6 @@ node_weight_type : DEGREE_CENTRALITY
 
 [PageRankBottomFilter]
 active : yes
-strict : no
-top_k : 100
+strict : yes
+top_k : 500
 
