added missing filters to pipeline

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -53,29 +53,35 @@ d : 0.85
 edge_type : SAME_COMMENT
 use_power_mode : no
 
-
-
 [CentralityDegreeCalculator]
 active : yes
 
-[BottomSimilarityEdgeFilter]
+[GenericEdgeFilter]
 active : no
-top_edges : 5
-
-[BottomReplyToEdgeFilter]
-active : no
-top_edges : 1
-
-[GenericBottomEdgeFilter]
-active : no
-top_edges : 2
-edge_type: SIMILARITY
+threshold : 0.13
+edge_type : REPLY_TO
 
 [SimilarityEdgeFilter]
 active : no
 threshold : 0.13
 
 [ReplyToEdgeFilter]
+active : no
+threshold : 0.5
+
+[SameCommentEdgeFilter]
+active : no
+threshold : 0.5
+
+[SameArticleEdgeFilter]
+active : no
+threshold : 0.5
+
+[SameGroupEdgeFilter]
+active : no
+threshold : 0.5
+
+[TemporalEdgeFilter]
 active : no
 threshold : 0.5
 
@@ -88,11 +94,70 @@ similarity_threshold : -0.5
 same_group_threshold : -0.5
 temporal_threshold : 0.5
 
+[GenericBottomEdgeFilter]
+active : no
+top_edges : 2
+edge_type: REPLY_TO
+
+[BottomSimilarityEdgeFilter]
+active : no
+top_edges : 5
+
+[BottomReplyToEdgeFilter]
+active : no
+top_edges : 1
+
+[BottomTemporalEdgeFilter]
+active : no
+top_edges : 5
+
+[BottomSameCommentFilter]
+active : no
+top_edges : 5
+
+[BottomSameArticleEdgeFilter]
+active : no
+top_edges : 5
+
+[BottomSameGroupEdgeFilter]
+active : no
+top_edges : 5
+
 [GenericNodeWeightFilter]
 active : no
 strict : no
 threshold : 2
 node_weight_type : DEGREE_CENTRALITY
+
+[SizeFilter]
+active : no
+strict : no
+threshold : 1
+
+[PageRankFilter]
+active : no
+strict : no
+threshold : 1
+
+[DegreeCentralityFilter]
+active : no
+strict : no
+threshold : 1
+
+[RecencyFilter]
+active : no
+strict : no
+threshold : 1
+
+[VotesFilter]
+active : no
+strict : no
+threshold : 1
+
+[ToxicityFilter]
+active : no
+strict : no
+threshold : 1
 
 [GenericNodeWeightBottomFilter]
 active : no
@@ -100,8 +165,32 @@ strict : no
 top_k : 5
 node_weight_type : DEGREE_CENTRALITY
 
+[SizeBottomFilter]
+active : no
+strict : no
+top_k : 5
+
 [PageRankBottomFilter]
 active : yes
 strict : yes
 top_k : 500
 
+[DegreeCentralityBottomFilter]
+active : no
+strict : no
+top_k : 5
+
+[RecencyBottomFilter]
+active : no
+strict : no
+top_k : 5
+
+[VotesBottomFilter]
+active : no
+strict : no
+top_k : 5
+
+[ToxicityBottomFilter]
+active : no
+strict : no
+top_k : 5
