added rankers for size, votes, recency

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -46,8 +46,20 @@ base_weight : 1.0
 only_root : yes
 max_time : 1000
 
-[PageRanker]
+[SizeRanker]
+active : no
+
+[RecencyRanker]
 active : yes
+use_yongest : no
+
+[VotesRanker]
+active : no
+use_upvotes : yes
+use_downvotes : yes
+
+[PageRanker]
+active : no
 num_iterations : 100
 d : 0.85
 edge_type : SAME_COMMENT
@@ -171,7 +183,7 @@ strict : no
 top_k : 5
 
 [PageRankBottomFilter]
-active : yes
+active : no
 strict : yes
 top_k : 500
 
@@ -188,7 +200,7 @@ top_k : 5
 [VotesBottomFilter]
 active : no
 strict : no
-top_k : 5
+top_k : 50
 
 [ToxicityBottomFilter]
 active : no
