added toxicityranker to config file

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -30,7 +30,7 @@ base_weight : 1.0
 only_root : yes
 
 [ReplyToComparator]
-active : yes
+active : no
 base_weight : 1.0
 only_root : yes
 
@@ -50,7 +50,7 @@ max_time : 1000
 active : no
 
 [RecencyRanker]
-active : yes
+active : no
 use_yongest : no
 
 [VotesRanker]
@@ -65,8 +65,11 @@ d : 0.85
 edge_type : SAME_COMMENT
 use_power_mode : no
 
+[ToxicityRanker]
+active: yes
+
 [CentralityDegreeCalculator]
-active : yes
+active : no
 
 [GenericEdgeFilter]
 active : no
