test with filter and small fix

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -170,9 +170,9 @@ strict : no
 threshold : 1
 
 [ToxicityFilter]
-active : no
+active : yes
 strict : no
-threshold : 1
+threshold : 0.5
 
 [GenericNodeWeightBottomFilter]
 active : no
