added parameter for <=, >= for threshold filters

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -74,31 +74,38 @@ active : no
 [GenericEdgeFilter]
 active : no
 threshold : 0.13
+smaller_as : no
 edge_type : REPLY_TO
 
 [SimilarityEdgeFilter]
 active : no
 threshold : 0.13
+smaller_as : no
 
 [ReplyToEdgeFilter]
 active : no
 threshold : 0.5
+smaller_as : no
 
 [SameCommentEdgeFilter]
 active : no
 threshold : 0.5
+smaller_as : no
 
 [SameArticleEdgeFilter]
 active : no
 threshold : 0.5
+smaller_as : no
 
 [SameGroupEdgeFilter]
 active : no
 threshold : 0.5
+smaller_as : no
 
 [TemporalEdgeFilter]
 active : no
 threshold : 0.5
+smaller_as : no
 
 [OrEdgeFilter]
 active : no
@@ -142,37 +149,44 @@ top_edges : 5
 active : no
 strict : no
 threshold : 2
+smaller_as : no
 node_weight_type : DEGREE_CENTRALITY
 
 [SizeFilter]
 active : no
 strict : no
 threshold : 1
+smaller_as : no
 
 [PageRankFilter]
 active : no
 strict : no
 threshold : 1
+smaller_as : no
 
 [DegreeCentralityFilter]
 active : no
 strict : no
 threshold : 1
+smaller_as : no
 
 [RecencyFilter]
 active : no
 strict : no
 threshold : 1
+smaller_as : no
 
 [VotesFilter]
 active : no
 strict : no
 threshold : 1
+smaller_as : no
 
 [ToxicityFilter]
 active : yes
 strict : no
 threshold : 0.5
+smaller_as : yes
 
 [GenericNodeWeightBottomFilter]
 active : no
