added option for reverting top-k filter

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -119,31 +119,38 @@ temporal_threshold : 0.5
 [GenericBottomEdgeFilter]
 active : no
 top_edges : 2
+descending_order = yes
 edge_type: REPLY_TO
 
 [BottomSimilarityEdgeFilter]
 active : no
 top_edges : 5
+descending_order = yes
 
 [BottomReplyToEdgeFilter]
 active : no
 top_edges : 1
+descending_order = yes
 
 [BottomTemporalEdgeFilter]
 active : no
 top_edges : 5
+descending_order = yes
 
 [BottomSameCommentFilter]
 active : no
 top_edges : 5
+descending_order = yes
 
 [BottomSameArticleEdgeFilter]
 active : no
 top_edges : 5
+descending_order = yes
 
 [BottomSameGroupEdgeFilter]
 active : no
 top_edges : 5
+descending_order = yes
 
 [GenericNodeWeightFilter]
 active : no
@@ -183,7 +190,7 @@ threshold : 1
 smaller_as : no
 
 [ToxicityFilter]
-active : yes
+active : no
 strict : no
 threshold : 0.5
 smaller_as : yes
@@ -192,34 +199,41 @@ smaller_as : yes
 active : no
 strict : no
 top_k : 5
+descending_order = yes
 node_weight_type : DEGREE_CENTRALITY
 
 [SizeBottomFilter]
 active : no
 strict : no
 top_k : 5
+descending_order = yes
 
 [PageRankBottomFilter]
 active : no
 strict : yes
 top_k : 500
+descending_order = yes
 
 [DegreeCentralityBottomFilter]
 active : no
 strict : no
 top_k : 5
+descending_order = yes
 
 [RecencyBottomFilter]
 active : no
 strict : no
 top_k : 5
+descending_order = yes
 
 [VotesBottomFilter]
 active : no
 strict : no
 top_k : 50
+descending_order = yes
 
 [ToxicityBottomFilter]
-active : no
+active : yes
 strict : no
-top_k : 5
+top_k : 10
+descending_order = yes
