added option to process toxicity on total comment or in comment splits + small fixes

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -67,6 +67,8 @@ use_power_mode : no
 
 [ToxicityRanker]
 active : yes
+window_length : 125
+whole_comment : yes
 
 [CentralityDegreeCalculator]
 active : no
@@ -235,5 +237,5 @@ descending_order = yes
 [ToxicityBottomFilter]
 active : yes
 strict : no
-top_k : 10
+top_k : 500
 descending_order = yes
