added lazy model loading

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -18,6 +18,7 @@ sz_api_key : 'API_KEY
 [TextProcessing]
 min_split_len : 10
 fasttext_path: E://cc.de.300.bin
+toxicity_path: E://comex-web//server//models/trained_toxicity_model
 
 [SameCommentComparator]
 active : yes
