started with merge implementation

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -240,3 +240,9 @@ active : yes
 strict : no
 top_k : 500
 descending_order = yes
+
+[GenericNodeMerger]
+active : yes
+threshold : 2
+smaller_as : no
+edge_weight_type : SAME_COMMENT
