added node merging based on edge thresholds

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -31,15 +31,15 @@ base_weight : 1.0
 only_root : yes
 
 [ReplyToComparator]
-active : no
+active : yes
 base_weight : 1.0
 only_root : yes
 
 [SimilarityComparator]
-active : no
+active : yes
 base_weight : 0.1
 only_root : yes
-max_similarity : 0.5
+max_similarity : 0.75
 
 [TemporalComparator]
 active : no
@@ -67,7 +67,7 @@ edge_type : SAME_COMMENT
 use_power_mode : no
 
 [ToxicityRanker]
-active : yes
+active : no
 window_length : 125
 whole_comment : yes
 
@@ -82,7 +82,7 @@ edge_type : REPLY_TO
 
 [SimilarityEdgeFilter]
 active : no
-threshold : 0.13
+threshold : 0.3
 smaller_as : no
 
 [ReplyToEdgeFilter]
@@ -236,13 +236,43 @@ top_k : 50
 descending_order = yes
 
 [ToxicityBottomFilter]
-active : yes
+active : no
 strict : no
 top_k : 500
 descending_order = yes
 
 [GenericNodeMerger]
-active : yes
-threshold : 2
+active : no
+threshold : 0.5
 smaller_as : no
 edge_weight_type : SAME_COMMENT
+
+[SimilarityNodeMerger]
+active : yes
+threshold : 0.5
+smaller_as : no
+
+[ReplyToNodeMerger]
+active : no
+threshold : 0.5
+smaller_as : no
+
+[SameCommentNodeMerger]
+active : no
+threshold : 0.5
+smaller_as : no
+
+[SameArticleNodeMerger]
+active : no
+threshold : 0.5
+smaller_as : no
+
+[SameGroupNodeMerger]
+active : no
+threshold : 0.5
+smaller_as : no
+
+[TemporalNodeMerger]
+active : no
+threshold : 0.12
+smaller_as : no
