added MultiNodeMerger for conjunctive merging of nodes based on edge thresholds

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -36,7 +36,7 @@ base_weight : 1.0
 only_root : yes
 
 [SimilarityComparator]
-active : yes
+active : no
 base_weight : 0.1
 only_root : yes
 max_similarity : 0.75
@@ -248,7 +248,7 @@ smaller_as : no
 edge_weight_type : SAME_COMMENT
 
 [SimilarityNodeMerger]
-active : yes
+active : no
 threshold : 0.11
 smaller_as : no
 
@@ -276,3 +276,14 @@ smaller_as : no
 active : no
 threshold : 0.12
 smaller_as : no
+
+[MultiNodeMerger]
+active : yes
+reply_to_threshold : 0.5
+same_comment_threshold : 0.5
+same_article_threshold : -0.5
+similarity_threshold : -0.5
+same_group_threshold : -0.5
+temporal_threshold : -0.5
+smaller_as : no
+conj_or : yes
