added networkx implementation of Girvan Newman community detection and greedy modularity based communities

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -278,7 +278,7 @@ threshold : 0.12
 smaller_as : no
 
 [MultiNodeMerger]
-active : yes
+active : no
 reply_to_threshold : 0.5
 same_comment_threshold : 0.5
 same_article_threshold : -0.5
@@ -287,3 +287,32 @@ same_group_threshold : -0.5
 temporal_threshold : -0.5
 smaller_as : no
 conj_or : yes
+
+[GenericClusterer]
+active: yes
+edge_weight_type : SAME_COMMENT
+algorithm : GirvanNewman
+
+[SimilarityClusterer]
+active : no
+algorithm : GirvanNewman
+
+[ReplyToClusterer]
+active : no
+algorithm : GirvanNewman
+
+[SameCommentClusterer]
+active : no
+algorithm : GirvanNewman
+
+[SameArticleClusterer]
+active : no
+algorithm : GirvanNewman
+
+[SameGroupClusterer]
+active : no
+algorithm : GirvanNewman
+
+[TemporalClusterer]
+active : no
+algorithm : GirvanNewman
