added possibility to cluster on base of multiple edges

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -289,7 +289,7 @@ smaller_as : no
 conj_or : yes
 
 [GenericClusterer]
-active: yes
+active: no
 edge_weight_type : SAME_COMMENT
 algorithm : GirvanNewman
 
@@ -315,4 +315,14 @@ algorithm : GirvanNewman
 
 [TemporalClusterer]
 active : no
+algorithm : GirvanNewman
+
+[MultiEdgeTypeClusterer]
+active : yes
+use_reply_to : yes
+use_same_comment : yes
+use_same_article : no
+use_similarity : no
+use_same_group : no
+use_temporal : no
 algorithm : GirvanNewman
