added benchmark mode to config file and graph cache

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -6,6 +6,9 @@ header_trusted_host : no
 header_cors : no
 debug_mode : yes
 
+[mode]
+benchmark: yes
+
 [logging]
 config_file : configs/logging_verbose.yaml
 
