uncommented due time costs

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -54,7 +54,7 @@ max_time : 1000
 active : no
 
 [RecencyRanker]
-active : no
+active : yes
 use_yongest : no
 
 [VotesRanker]
@@ -321,7 +321,7 @@ active : no
 algorithm : GirvanNewman
 
 [MultiEdgeTypeClusterer]
-active : yes
+active : no
 use_reply_to : yes
 use_same_comment : yes
 use_same_article : no
@@ -329,3 +329,9 @@ use_similarity : no
 use_same_group : no
 use_temporal : no
 algorithm : GirvanNewman
+
+[GenericSingleEdgeAdder]
+active : yes
+base_weight = 0.1
+edge_weight_type : TEMPORAL
+node_weight_type : RECENCY
