experimented with different configuration parameters

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -29,7 +29,7 @@ base_weight : 1.0
 only_consecutive : yes
 
 [SameArticleComparator]
-active : no
+active : yes
 base_weight : 1.0
 only_root : yes
 
@@ -45,29 +45,29 @@ only_root : yes
 max_similarity : 0.75
 
 [TemporalComparator]
-active : no
+active : yes
 base_weight : 1.0
 only_root : yes
 max_time : 1000
 
 [SizeRanker]
-active : no
+active : yes
 
 [RecencyRanker]
 active : yes
 use_yongest : no
 
 [VotesRanker]
-active : no
+active : yes
 use_upvotes : yes
 use_downvotes : yes
 
 [PageRanker]
-active : no
+active : yes
 num_iterations : 100
 d : 0.85
-edge_type : SAME_COMMENT
-use_power_mode : no
+edge_type : TEMPORAL
+use_power_mode : yes
 
 [ToxicityRanker]
 active : no
@@ -75,7 +75,7 @@ window_length : 125
 whole_comment : yes
 
 [CentralityDegreeCalculator]
-active : no
+active : yes
 
 [GenericEdgeFilter]
 active : no
@@ -135,27 +135,27 @@ descending_order = yes
 
 [BottomReplyToEdgeFilter]
 active : no
-top_edges : 1
+top_edges : 100
 descending_order = yes
 
 [BottomTemporalEdgeFilter]
 active : no
-top_edges : 5
+top_edges : 100
 descending_order = yes
 
 [BottomSameCommentFilter]
 active : no
-top_edges : 5
+top_edges : 100
 descending_order = yes
 
 [BottomSameArticleEdgeFilter]
 active : no
-top_edges : 5
+top_edges : 100
 descending_order = yes
 
 [BottomSameGroupEdgeFilter]
 active : no
-top_edges : 5
+top_edges : 100
 descending_order = yes
 
 [GenericNodeWeightFilter]
@@ -215,9 +215,9 @@ top_k : 5
 descending_order = yes
 
 [PageRankBottomFilter]
-active : no
+active : yes
 strict : yes
-top_k : 500
+top_k : 200
 descending_order = yes
 
 [DegreeCentralityBottomFilter]
@@ -256,7 +256,7 @@ threshold : 0.11
 smaller_as : no
 
 [ReplyToNodeMerger]
-active : no
+active : yes
 threshold : 0.5
 smaller_as : no
 
