--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -190,9 +190,9 @@ threshold : 1
 smaller_as : no
 
 [VotesFilter]
-active : no
+active : yes
 strict : no
-threshold : 1
+threshold : 2
 smaller_as : no
 
 [ToxicityFilter]
