graph config options in frontend

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -7,7 +7,7 @@ header_cors : no
 debug_mode : yes
 
 [mode]
-benchmark: no
+benchmark : no
 
 [logging]
 config_file : configs/logging_verbose.yaml
@@ -20,8 +20,8 @@ sz_api_key : 'API_KEY
 
 [TextProcessing]
 min_split_len : 10
-fasttext_path: E://cc.de.300.bin
-toxicity_path: E://comex-web//server//models/trained_toxicity_model
+fasttext_path : E://cc.de.300.bin
+toxicity_path : E://comex-web//server//models/trained_toxicity_model
 
 [SameCommentComparator]
 active : yes
@@ -125,38 +125,38 @@ temporal_threshold : 0.5
 [GenericBottomEdgeFilter]
 active : no
 top_edges : 2
-descending_order = yes
-edge_type: REPLY_TO
+descending_order : yes
+edge_type : REPLY_TO
 
 [BottomSimilarityEdgeFilter]
 active : no
 top_edges : 5
-descending_order = yes
+descending_order : yes
 
 [BottomReplyToEdgeFilter]
 active : no
 top_edges : 100
-descending_order = yes
+descending_order : yes
 
 [BottomTemporalEdgeFilter]
 active : no
 top_edges : 100
-descending_order = yes
+descending_order : yes
 
 [BottomSameCommentFilter]
 active : no
 top_edges : 100
-descending_order = yes
+descending_order : yes
 
 [BottomSameArticleEdgeFilter]
 active : no
 top_edges : 100
-descending_order = yes
+descending_order : yes
 
 [BottomSameGroupEdgeFilter]
 active : no
 top_edges : 100
-descending_order = yes
+descending_order : yes
 
 [GenericNodeWeightFilter]
 active : no
@@ -205,44 +205,44 @@ smaller_as : yes
 active : no
 strict : no
 top_k : 5
-descending_order = yes
+descending_order : yes
 node_weight_type : DEGREE_CENTRALITY
 
 [SizeBottomFilter]
 active : no
 strict : no
 top_k : 5
-descending_order = yes
+descending_order : yes
 
 [PageRankBottomFilter]
 active : yes
 strict : yes
 top_k : 200
-descending_order = yes
+descending_order : yes
 
 [DegreeCentralityBottomFilter]
 active : no
 strict : no
 top_k : 5
-descending_order = yes
+descending_order : yes
 
 [RecencyBottomFilter]
 active : no
 strict : no
 top_k : 5
-descending_order = yes
+descending_order : yes
 
 [VotesBottomFilter]
 active : no
 strict : no
 top_k : 50
-descending_order = yes
+descending_order : yes
 
 [ToxicityBottomFilter]
 active : no
 strict : no
 top_k : 500
-descending_order = yes
+descending_order : yes
 
 [GenericNodeMerger]
 active : no
@@ -292,7 +292,7 @@ smaller_as : no
 conj_or : yes
 
 [GenericClusterer]
-active: no
+active : no
 edge_weight_type : SAME_COMMENT
 algorithm : GirvanNewman
 
@@ -332,6 +332,6 @@ algorithm : GirvanNewman
 
 [GenericSingleEdgeAdder]
 active : yes
-base_weight = 0.1
+base_weight : 0.1
 edge_weight_type : TEMPORAL
 node_weight_type : RECENCY
