set multiedgetype clusterer to default

--- a/server/configs/DEFAULT.ini
+++ b/server/configs/DEFAULT.ini
@@ -256,7 +256,7 @@ threshold : 0.11
 smaller_as : no
 
 [ReplyToNodeMerger]
-active : yes
+active : no
 threshold : 0.5
 smaller_as : no
 
@@ -321,13 +321,13 @@ active : no
 algorithm : GirvanNewman
 
 [MultiEdgeTypeClusterer]
-active : no
+active : yes
 use_reply_to : yes
 use_same_comment : yes
 use_same_article : no
 use_similarity : no
 use_same_group : no
-use_temporal : no
+use_temporal : yes
 algorithm : GirvanNewman
 
 [GenericSingleEdgeAdder]
